--BJS2-88171 - Stream API exercises 1 - corrections