@@ -1,7 +1,9 @@
 package school.faang.bjs2_88171;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 public class Main {
 
@@ -11,7 +13,7 @@ public class Main {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
         List<String> strings = Arrays.asList("apple", "banana", "cherry", "date");
 
-        List<Integer> emptyNumbers = List.of();
+        List<Integer> emptyNumbers = Collections.emptyList();
 
         System.out.println("Sum of even numbers: " + ListOperations.sumOfEvenNumbers(numbers));
         System.out.println("Maximum: " + ListOperations.findMax(numbers));
@@ -23,7 +25,16 @@ public class Main {
         System.out.println("Smallest number, but greater than 4: " + ListOperations.findMinGreaterThan(numbers, 4));
         System.out.println("String length: " + ListOperations.mapToLengths(strings));
 
-        System.out.println("Maximum: " + ListOperations.findMax(emptyNumbers));
-        System.out.println("Average: " + ListOperations.findAverage(emptyNumbers));
+        try {
+            System.out.println("Maximum: " + ListOperations.findMax(emptyNumbers));
+        } catch (NoSuchElementException e) {
+            System.out.println(("Error: " + e.getMessage()));
+        }
+
+        try {
+            System.out.println("Average: " + ListOperations.findAverage(emptyNumbers));
+        } catch (NoSuchElementException e) {
+            System.out.println(("Error: " + e.getMessage()));
+        }
     }
 }
